--- a/views/index.phtml
+++ b/views/index.phtml
@@ -1,3 +1,8 @@
 <?php require('header.phtml') ?>
-Product Listing Page
+<h3>Product Listing Page</h3>
+
+<h4>Main Menu</h4>
+<ul>
+    <li><a href="/create">Create a product</a></li>
+</ul>
 <?php require('footer.phtml') ?>
