Sorting by name and price

--- a/views/index.phtml
+++ b/views/index.phtml
@@ -10,8 +10,8 @@
     <th>Products</th>
     <tr>
         <td>Picture</td>
-        <td>Name</td>
-        <td>Price</td>
+        <td><a href="/name">Name</a></td>
+        <td><a href="/price">Price</a></td>
         <td>Description</td>
         <td>Actions</td>
     </tr>
